# cmathics

./: .travis.yml  CMakeLists.txt  README.md  mathics.cpp
arithmetic/: add.cpp  add.h  binary.h  compare.tcc  mul.cpp  mul.h  unary.h
builtin/: arithmetic.cpp  arithmetic.h  assignment.cpp  assignment.h  attributes.cpp  attributes.h  compare.cpp  comparison.cpp  comparison.h  control.cpp  control.h  evaluation.cpp  evaluation.h  exptrig.cpp  exptrig.h  functional.cpp  functional.h  inout.cpp  inout.h  levelspec.tcc  lists.cpp  lists.h  logic.cpp  logic.h  numbertheory.cpp  numbertheory.h  numeric.cpp  numeric.h  options.cpp  options.h  patterns.cpp  patterns.h  strings.cpp  strings.h  structure.cpp  structure.h
concurrent/: combiner.h  parallel.cpp  parallel.h  pool.h
core/: arithmetic.cpp  arithmetic.h  arithmetic_implementation.h  attributes.h  builtin.h  cache.h  cache.tcc  complex.cpp  complex.h  definitions.cpp  definitions.h  evaluate.cpp  evaluate.h  evaluation.cpp  evaluation.h  evaluation.tcc  expression.cpp  expression.h  formatter.cpp  formatter.h  generator.h  hash.cpp  hash.h  heap.cpp  heap.h  heap.tcc  integer.cpp  integer.h  leaves.cpp  leaves.h  leaves.tcc  map.h  matcher.cpp  matcher.h  misc.cpp  misc.h  numberform.cpp  numberform.h  numeric.h  operations.h  (+30 more)
core/atoms/: complex.cpp  complex.h  integer.cpp  integer.h  numeric.h  numeric.tcc  precision.cpp  precision.h  rational.cpp  rational.h  real.cpp  real.h  string.cpp  string.h  symbol.cpp  symbol.h
core/expression/: construct.h  implementation.cpp  implementation.h  interface.h  memory.h
core/matcher/: generic.tcc  matcher.cpp  matcher.h  matcher.tcc
core/pattern/: arguments.h  arguments.tcc  context.h  context.tcc  match.h  match.tcc  matcher.cpp  matcher.h  matcher.tcc  options.cpp  options.h  options.tcc  rewrite.cpp  rewrite.h  rewrite.tcc  rule.tcc  sequence.tcc  size.h  slot.h  unpack.h
core/slice/: array.h  array.tcc  big.h  code.h  collection.h  generator.h  heap.h  method.h  method.tcc  packed.h  primitives.h  slice.h  tiny.h  vcall.h  vcall.tcc  vector.cpp  vector.h
mpfrcxx/example/: example.cpp
parser/: tokeniser.cpp  tokeniser.h
tests/: test.cpp  test_arithmetic.cpp  test_datastructures.cpp  test_definitions.cpp  test_expression.cpp  test_integer.cpp  test_matcher.cpp  test_parallel.cpp  test_pool.cpp  test_rational.cpp  test_real.cpp  test_string.cpp
